# hostedsms-python

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
hostedsms/: api.py  exceptions.py  responses.py  settings.py
tests/: testapi.wsdl  tests.py
