[tool.poetry]
name = "hostedsms-api"
version = "1.0.0"
description = "Python library for sending SMS via HostedSMS.pl"
authors = ["dcs.pl <info@dcs.pl>"]
license = "Apache v2 License"
readme = "README.md"
repository = "https://github.com/dcs-pl/hostedsms-python"
packages = [
    { include = "hostedsms" },
]

[tool.poetry.dependencies]
python = "^3.8"

suds = ">=1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
